fix: adição do atributo password e endpoint para buscar usuario pelo username
